# pytikhonov

./: .gitignore  README.md  pyproject.toml
examples/: conservation.ipynb
examples/burgers/: burgers.ipynb
examples/deblur_1d/: deblurring_example.ipynb  deblurring_hybrid_projection.ipynb  deblurring_projection.ipynb
examples/deblur_1d_conservation/: deblurring_example.ipynb  deblurring_projection.ipynb
examples/denoise_interp1d/: denoise_interp_1d.ipynb
examples/interp1d/: interp1d.ipynb
pytikhonov/: __init__.py  comparisons.py  discrepancy_principle.py  factorizations.py  gcv.py  lcurve.py  matrices.py  plotting.py  projected_tikhonov.py  rand.py  tikhonov_family.py  util.py
tests/: test_core.py  test_data_residual.py  test_gsvd_regparam_defs.py  test_project_method_consistency.py  test_projected_tikhonov_family.py  test_tikhonov_family.py
