[tool.hatch.build.targets.wheel]
packages = ["pytikhonov"]

[build-system]
requires = ["hatchling", "numpy", "scipy"]
build-backend = "hatchling.build"

[project]
name = "pytikhonov"
version = "0.0.2"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
]
description = "Some tools for Tikhonov regularization, including regularization parameter selection."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["inverse problems", "tikhonov regularization", "regularization parameter", "discrepancy principle", "lcurve", "GCV"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/pytikhonov"
"Bug Tracker" = "https://github.com/jlindbloom/pytikhonov/issues"